tests/snapshots/regression/precedence__arithmetic_precedence.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/arithmetic_precedence.flx
exit_code: 1

--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- expected () -> Unit, found () -> Unit with IO

Help:
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> tests/fixtures/precedence/arithmetic_precedence.flx:1:1
  |
1 | print(1 + 2 * 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> tests/fixtures/precedence/arithmetic_precedence.flx:2:1
  |
2 | print(1 * 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> tests/fixtures/precedence/arithmetic_precedence.flx:3:1
  |
3 | print(1 + 2 + 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- expected () -> Unit, found () -> Unit with IO

Help:
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> tests/fixtures/precedence/arithmetic_precedence.flx:3:1
  |
3 | print(1 + 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> tests/fixtures/precedence/arithmetic_precedence.flx:4:1
  |
4 | print(1 - 2 - 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 7 errors.
